Bugs fix, and floating window is BACK!!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
 
     <!-- Actions -->
     <string name="action_android_settings_accessibility_settings" translatable="false">android.settings.ACCESSIBILITY_SETTINGS</string>
+    <string name="to_show_floating_window_when_you_are_playing_the_game_on_android_lower_than_kitkat_we_need_draw_over_apps_permission_granted">To show floating window when you are playing the game on Android lower than Kitkat, we need Draw Over Apps permission granted.</string>
+    <string name="we_need_necessary_permissions_to_work_properly">We need necessary permissions to work properly</string>
 </resources>
