--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,12 +13,16 @@
     <string name="permission_required">Permission required</string>
     <string name="to_detect_whether_you_are_playing_the_game_on_android_lollipop_and_higher_we_need_accessibility_service_enabled">To detect whether you are playing the game on Android Lollipop and higher, we need accessibility service enabled.</string>
     <string name="cancel">Cancel</string>
+    <string name="enable_quick_add_from_screenshot">Enable quick add from screenshot</string>
+    <string name="enable_quick_add_from_detecting_screenshot_content_require_permission">Enable quick add from detecting screenshot content. Require permission</string>
 
     <!-- Preference keys -->
     <string name="pk_service_enabled" translatable="false">service_enabled</string>
+    <string name="pk_screenshot_quick_add_enabled" translatable="false">screenshot_quick_add_enabled</string>
 
     <!-- Actions -->
     <string name="action_android_settings_accessibility_settings" translatable="false">android.settings.ACCESSIBILITY_SETTINGS</string>
     <string name="to_show_floating_window_when_you_are_playing_the_game_on_android_lower_than_kitkat_we_need_draw_over_apps_permission_granted">To show floating window when you are playing the game on Android lower than Kitkat, we need Draw Over Apps permission granted.</string>
     <string name="we_need_necessary_permissions_to_work_properly">We need necessary permissions to work properly</string>
+    <string name="read_external_storage_permission_is_required_to_read_your_screenshot">READ_EXTERNAL_STORAGE permission is required to read your screenshot</string>
 </resources>
